setup/manifests/tenant-2/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: "tenant-2-peerauth"
  namespace: "tenant-2"
spec:
  mtls:
    mode: STRICT
