setup/manifests/tenant-2/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: app-ns-2
spec:
  selector:
    app: gateway-tenant-2
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "httpbin2.example.com"
